--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,9 +1,12 @@
-server{
+server
+{
 	listen 8080;
+	host 127.88.12.52;
 	server_name www.com;
 }
 
-server{
+server
+{
 	listen 80;
 	server_name teste.com;
 }
