working on conf file , added error_pages and client_max_body_size

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,7 +1,11 @@
 server
 {
 	listen 8080;
+	client_max_body_size 3000000;
 	host 127.88.12.52;
+	error_page 404 error_pages/404.html;
+	error_page 500 error_pages/500.html;
+	error_page 600 error_pages/100;
 	server_name www.com;
 }
 
@@ -9,5 +13,12 @@ server
 {
 	listen 80;
 	server_name teste.com;
+	error_page 500 error_pages/500.html;
 	host 127.0.0.1;
+}
+
+server {
+	listen 49;
+	server_name ok.com;
+	host 0.0.0.0;
 }
