working on conf file, added host,index,auto_index

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -2,6 +2,9 @@ server
 {
 	listen 8080;
 	client_max_body_size 3000000;
+	root /pages_main/web_pages/;
+	index index.html;
+	auto_index on;
 	host 127.88.12.52;
 	error_page 404 error_pages/404.html;
 	error_page 500 error_pages/500.html;
