working on conf file, added location

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -10,6 +10,15 @@ server
 	error_page 500 error_pages/500.html;
 	error_page 600 error_pages/100;
 	server_name www.com;
+	
+	location / {
+		root /pages_main/;
+	}
+
+	location /ok {
+		root teste;
+	}
+	
 }
 
 server
