working on conf file, added socket fd and init them, still has some mistakes when use bind on more than one socket

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -24,13 +24,46 @@ server
 server
 {
 	listen 80;
-	server_name teste.com;
+	client_max_body_size 300000;
+	root /pages_main/web_pages/;
+	index index.html;
+	auto_index on;
+	host 0.0.0.0;
+	error_page 404 error_pages/404.html;
 	error_page 500 error_pages/500.html;
-	host 127.0.0.1;
+	error_page 600 error_pages/100;
+	server_name www.com;
+	
+	location / {
+		root /pages_main/;
+	}
+
+	location /ok {
+		root teste;
+	}
+
+	location /teste {
+		root okok.com;
+	}
 }
 
 server {
-	listen 49;
-	server_name ok.com;
-	host 0.0.0.0;
+	listen 8081;
+	client_max_body_size 300000;
+	root /pages_main/web_pages/;
+	index index.html;
+	auto_index on;
+	host 120.20.10.44;
+	error_page 404 error_pages/404.html;
+	error_page 500 error_pages/500.html;
+	error_page 600 error_pages/100;
+	server_name www.com;
+	
+	location / {
+		root /pages_main/;
+	}
+
+	location /ok {
+		root teste;
+	}
 }
