--- a/conf/teste.conf
+++ b/conf/teste.conf
@@ -1,3 +1,69 @@
+server
+{
+	listen 8080;
+	client_max_body_size 3000000;
+	root /pages_main/web_pages/;
+	index index.html;
+	auto_index on;
+	host 127.88.12.52;
+	error_page 404 error_pages/404.html;
+	error_page 500 error_pages/500.html;
+	error_page 600 error_pages/100;
+	server_name www.com;
+	
+	location / {
+		root /pages_main/;
+	}
+
+	location /ok {
+		root teste;
+	}
+	
+}
+
+server
+{
+	listen 80;
+	client_max_body_size 300000;
+	root /pages_main/web_pages/;
+	index index.html;
+	auto_index on;
+	host 0.0.0.0;
+	error_page 404 error_pages/404.html;
+	error_page 500 error_pages/500.html;
+	error_page 600 error_pages/100;
+	server_name www.com;
+	
+	location / {
+		root /pages_main/;
+	}
+
+	location /ok {
+		root teste;
+	}
+
+	location /teste {
+		root okok.com;
+	}
+}
+
 server {
-	listen        80;
+	listen 8081;
+	client_max_body_size 300000;
+	root /pages_main/web_pages/;
+	index index.html;
+	auto_index on;
+	host 120.20.10.44;
+	error_page 404 error_pages/404.html;
+	error_page 500 error_pages/500.html;
+	error_page 600 error_pages/100;
+	server_name www.com;
+	
+	location / {
+		root /pages_main/;
+	}
+
+	location /ok {
+		root teste;
+	}
 }
