--- a/conf/default.conf
+++ b/conf/default.conf
@@ -20,39 +20,13 @@ server {
 	
 }
 
-server
-{
-	listen 80;
-	client_max_body_size 300000;
-	root /pages_main/web_pages/;
-	index index.html;
-	auto_index on;
-	host 0.0.0.0;
-	error_page 404 error_pages/404.html;
-	error_page 500 error_pages/500.html;
-	error_page 600 error_pages/100;
-	server_name www.com;
-	
-	location / {
-		root /pages_main/;
-	}
-
-	location /ok {
-		root teste;
-	}
-
-	location /teste {
-		root okok.com;
-	}
-}
-
 server {
-	listen 8081;
-	client_max_body_size 300000;
+	listen 80;
+	client_max_body_size 3000000;
 	root /pages_main/web_pages/;
 	index index.html;
 	auto_index on;
-	host 120.20.10.44;
+	host 127.88.13.52;
 	error_page 404 error_pages/404.html;
 	error_page 500 error_pages/500.html;
 	error_page 600 error_pages/100;
@@ -65,4 +39,5 @@ server {
 	location /ok {
 		root teste;
 	}
+	
 }
